update node, remove unused packages, update jquery

--- a/frontend/dev/includes/head_admin.html
+++ b/frontend/dev/includes/head_admin.html
@@ -19,7 +19,7 @@
 
 	<link rel="stylesheet" href="/css/main.css">
 
-	<script src="//yastatic.net/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-4.0.0-beta.min.js"></script>
 	
 	<script src="/js/main.js"></script>
 </head>
