--- a/backend/web/main.css
+++ b/backend/web/main.css
@@ -79,14 +79,6 @@
   color: #333;
   font-size: 14px;
 }
-.form__input-tip {
-  margin-top: -7px;
-  color: #aaa;
-  font-size: 10px;
-}
-.form__input-tip_error {
-  color: #f00000;
-}
 .form__button-tip {
   margin-top: 2px;
   color: #aaa;
@@ -143,7 +135,7 @@
 }
 
 /* main blocks */
-.common__list-nostyle, .menu {
+.menu {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -214,7 +206,7 @@
   color: #f00000;
 }
 
-.common__table-nostyle, .rules__table {
+.rules__table {
   border: none;
   border-spacing: 0;
 }
