Migrate rules add and edit pages to HTMX
1. Replace JavaScript-based rule management with HTMX-powered
  interactions
2. Update server-side handlers to support HTMX requests
3. Modify HTML templates to use HTMX attributes
4. Remove unnecessary JavaScript code
5. Updates tests to cover new functionality

--- a/backend/web/components/rule-row.gohtml
+++ b/backend/web/components/rule-row.gohtml
@@ -1,7 +1,7 @@
 {{define "rule-row"}}
   <tr class="rules__row {{if not .Enabled}}rules__row_disabled{{end}}" data-id="{{.ID.Hex}}">
     <td class="rules__domain-cell">
-      <a href="/edit?id={{.ID.Hex}}" class="link">{{if .Domain}}{{.Domain}}{{else}}unspecified{{end}}</a>
+      <a href="/edit/{{.ID.Hex}}" class="link">{{if .Domain}}{{.Domain}}{{else}}unspecified{{end}}</a>
     </td>
     <td class="rules__content-cell">{{.Content}}</td>
     <td class="rules__enabled-cell">
